--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,24 +1,17 @@
 ---
 layout: page
-permalink: pretty
 title: 分类
 ---
 
-
-<div id="archives">
-{% for category in site.categories %}
-  <div class="archive-group">
-    {% capture category_name %}{{ category | first }}{% endcapture %}
-    <div id="#{{ category_name | slugize }}"></div>
-    <p></p>
-
-    <h3 class="category-head">{{ category_name }}</h3>
-    <a name="{{ category_name | slugize }}"></a>
-    {% for post in site.categories[category_name] %}
-    <article class="archive-item">
-      <h4><a href="{{ site.url }}{{ post.url }}">{{post.title}}</a></h4>
-    </article>
-    {% endfor %}
+<div class="layout--archive js-all">
+  {%- include categories.html -%}
+  <div class="js-result layout--archive__result d-none">
+    {%- include article-list-category.html articles=site.posts type='brief' show_info=true reverse=true group_by='year' -%}
   </div>
-{% endfor %}
 </div>
+
+<script>
+  {%- include scripts/category.js -%}
+</script>
+
+{{ content }}
